--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
-@import-normalize; /* bring in normalize.css styles */
+@import-normalize;
 
-body {
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -12,4 +12,11 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+} */
+
+body {
+  background: linear-gradient(180deg, #fef9e7, #ffec99);
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  margin: 0;
 }
